--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.e_clinicapp">
 
     <application
@@ -9,8 +10,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Adminpage"></activity>
-        <activity android:name=".registerpatient" />
+        <activity android:name=".Caregiverslogin"></activity>
+        <activity android:name=".Doctors_menu" />
+        <activity android:name=".patientsmenu" />
+        <activity android:name=".homeadmin" />
+        <activity android:name=".registercaregiver" />
+        <activity android:name=".updatepatientsrecords" />
+        <activity android:name=".Adminlogin" />
+        <activity android:name=".Clinicpatientslogin" />
+        <activity android:name=".Clinicpatientsregister" />
+        <activity android:name=".admin" />
+        <activity
+            android:name=".ui.login.patientsloginpage"
+            android:label="@string/title_activity_patientsloginpage"
+            tools:ignore="MissingClass" />
+        <activity android:name=".caregiverspage" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
